buildscript {
    ext {
        queryDslVersion = "5.0.0"
    }
}

plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.2'
    id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.ani'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
    // 로깅 충돌 방지
    all*.exclude group: 'org.slf4j', module: 'slf4j-simple'
    all*.exclude group: 'commons-logging', module: 'commons-logging'
}

repositories {
    mavenCentral()
}

dependencies {
    // Spring Boot Starter
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-web-services'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-devtools'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
    // Cloudflare R2 연동 위한 S3 SDK
    implementation 'com.amazonaws:aws-java-sdk-s3:1.12.691'
    // AWS Lambda
    implementation 'software.amazon.awssdk:lambda:2.20.0'

    // Spring DATA
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
    implementation 'org.mongodb:mongodb-driver-sync'
    implementation "com.querydsl:querydsl-jpa:$queryDslVersion:jakarta"
    /* localDateTime 직렬화/역직렬화 필요 설정 */
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
    implementation 'com.fasterxml.jackson.core:jackson-databind'

    testImplementation 'org.springframework.security:spring-security-test'

    runtimeOnly 'com.mysql:mysql-connector-j'
    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'com.h2database:h2'
    annotationProcessor 'org.projectlombok:lombok'
    annotationProcessor "com.querydsl:querydsl-apt:$queryDslVersion:jakarta"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    // Redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'io.lettuce:lettuce-core'

    // JWT 관련 의존성
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    implementation 'org.modelmapper:modelmapper:3.1.1'

    // MySQL
    implementation 'mysql:mysql-connector-java:8.0.33'

    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.13.3'

    // 임베디드 Redis
    testImplementation('it.ozimov:embedded-redis:0.7.3') {
        exclude group: 'org.slf4j', module: 'slf4j-simple'
        exclude group: 'commons-logging', module: 'commons-logging'
    }
    testImplementation('com.github.codemonstur:embedded-redis:1.0.0') {
        exclude group: 'org.slf4j', module: 'slf4j-simple'
        exclude group: 'commons-logging', module: 'commons-logging'
    }
}

bootRun {
    // String activeProfile = System.getProperty("spring.profiles.active") ?: "local"
    // println "=========ENV : $activeProfile"
    // systemProperty "spring.profiles.active", activeProfile
}

tasks.named('bootRun') {
    jvmArgs = ['--add-opens', 'java.base/java.time=ALL-UNNAMED']
}

// Querydsl 설정
def querydslSrcDir = 'src/main/generated'

clean {
    delete file(querydslSrcDir)
}

// QueryDSL 빌드 시 생성될 소스 디렉토리 및 Annotation Processor 경로
tasks.withType(JavaCompile) {
    options.generatedSourceOutputDirectory = file(querydslSrcDir)
    options.annotationProcessorPath = configurations.annotationProcessor
}

// JUnit 설정
tasks.named('test') {
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
        showExceptions true
        showCauses true
        showStackTraces true
        exceptionFormat = 'full'
    }
    systemProperty 'spring.profiles.active', 'test'
}

// 컴파일 시 파라미터 정보 유지
compileJava {
    options.compilerArgs << '-parameters'
}

compileTestJava {
    options.compilerArgs << '-parameters'
}